--- a/Studia/Views/Shared/_Layout.cshtml
+++ b/Studia/Views/Shared/_Layout.cshtml
@@ -19,17 +19,19 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark px-3 py-2 rounded hover-effect" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark px-3 py-2 rounded hover-effect" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Tasks" asp-action="Index">Tasks</a>
+                            <a class="nav-link text-dark px-3 py-2 rounded hover-effect" asp-area="" asp-controller="Tasks" asp-action="Index">Tasks</a>
                         </li>
                     </ul>
+
+
                 </div>
             </div>
         </nav>
