--- a/Studia/Views/Tasks/Create.cshtml
+++ b/Studia/Views/Tasks/Create.cshtml
@@ -13,18 +13,18 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+                <label asp-for="Name" class="control-label">Name</label>
+                <input required="true" asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <input required="true" asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
-                <select asp-for="Status" class="form-select" >
+                <select required="true" asp-for="Status" class="form-select">
                     <option value="Completed">Complete</option>
                     <option value="Pending">Pending</option>
                     <option value="Due Late">Late</option>
@@ -32,15 +32,16 @@
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DueDateTime" class="control-label"></label>
+                <label required="true" asp-for="DueDateTime" class="control-label">Due date and time</label>
                 <input asp-for="DueDateTime" class="form-control" />
                 <span asp-validation-for="DueDateTime" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CreatedBy" class="control-label"></label>
+                <label asp-for="CreatedBy" class="control-label">Created by</label>
                 <input asp-for="CreatedBy" class="form-control" />
                 <span asp-validation-for="CreatedBy" class="text-danger"></span>
             </div>
+            <br/>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
