--- a/Studia/Views/Shared/_Layout.cshtml
+++ b/Studia/Views/Shared/_Layout.cshtml
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="~/Studia.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <header ">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-black border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Studia</a>
+                <a class="navbar-brand text-light" asp-area="" asp-controller="Home" asp-action="Index">Studia</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -21,13 +21,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link text-dark px-3 py-2 rounded hover-effect" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-light px-3 py-2 rounded hover-effect" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark px-3 py-2 rounded hover-effect" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-light px-3 py-2 rounded hover-effect" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark px-3 py-2 rounded hover-effect" asp-area="" asp-controller="Tasks" asp-action="Index">Tasks</a>
+                            <a class="nav-link text-light px-3 py-2 rounded hover-effect" asp-area="" asp-controller="Tasks" asp-action="Index">Tasks</a>
                         </li>
                     </ul>
 
