--- a/Studia/Views/Tasks/Create.cshtml
+++ b/Studia/Views/Tasks/Create.cshtml
@@ -8,9 +8,9 @@
 
 <h4>Task</h4>
 <hr />
-<div class="row">
+<div class="container">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form class="form" asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label">Name</label>
