--- a/Studia/wwwroot/css/site.css
+++ b/Studia/wwwroot/css/site.css
@@ -1,3 +1,6 @@
+body {
+    background-color: #171616;
+}
 html {
     font-size: 14px;
 }
@@ -100,3 +103,195 @@ body {
         transform: translateY(4px);
     }
 
+/* From Uiverse.io by ke1221 */
+.Cool-button {
+    color: #258cfb;
+    padding: 0.5em 0.9em;
+    text-decoration:none;
+    font-size: 16px;
+    border-radius: 0.5em;
+    background: #2b2a2a;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+    .Cool-button:active {
+        color: #666;
+    }
+
+/* From Uiverse.io by SelfMadeSystem */
+/* Hide the default checkbox */
+.container input {
+    display: none;
+}
+
+.container {
+    display: block;
+    position: relative;
+    cursor: pointer;
+    font-size: 20px;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+    position: relative;
+    top: 0;
+    left: 0;
+    height: 1.3em;
+    width: 1.3em;
+    background-color: #2196F300;
+    border-radius: 0.25em;
+    transition: all 0.25s;
+    
+}
+
+/* When the checkbox is checked, add a blue background */
+.container input:checked ~ .checkmark {
+    background-color: #2196F3;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+    content: "";
+    position: absolute;
+    transform: rotate(0deg);
+    border: 0.1em solid black;
+    left: 0;
+    top: 0;
+    width: 1.05em;
+    height: 1.05em;
+    border-radius: 0.25em;
+    transition: all 0.25s, border-width 0.1s;
+}
+
+/* Show the checkmark when checked */
+.container input:checked ~ .checkmark:after {
+    left: 0.45em;
+    top: 0.25em;
+    width: 0.25em;
+    height: 0.5em;
+    border-color: #fff0 white white #fff0;
+    border-width: 0 0.15em 0.15em 0;
+    border-radius: 0em;
+    transform: rotate(45deg);
+}
+
+/* From Uiverse.io by Rohankumar620 */
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform-style: preserve-3d;
+    transition: all 1s ease;
+}
+
+    .form .form_front {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        position: absolute;
+        backface-visibility: hidden;
+        padding: 65px 45px;
+        border-radius: 15px;
+        box-shadow: inset 2px 2px 10px rgba(0,0,0,1), inset -1px -1px 5px rgba(255, 255, 255, 0.6);
+    }
+
+    .form .form_back {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        position: absolute;
+        backface-visibility: hidden;
+        transform: rotateY(-180deg);
+        padding: 65px 45px;
+        border-radius: 15px;
+        box-shadow: inset 2px 2px 10px rgba(0,0,0,1), inset -1px -1px 5px rgba(255, 255, 255, 0.6);
+    }
+
+.form_details {
+    font-size: 25px;
+    font-weight: 600;
+    padding-bottom: 10px;
+    color: white;
+}
+
+.input {
+    width: 245px;
+    min-height: 45px;
+    color: #fff;
+    outline: none;
+    transition: 0.35s;
+    padding: 0px 7px;
+    background-color: #212121;
+    border-radius: 6px;
+    border: 2px solid #212121;
+    box-shadow: 6px 6px 10px rgba(0,0,0,1), 1px 1px 10px rgba(255, 255, 255, 0.6);
+}
+
+    .input::placeholder {
+        color: #999;
+    }
+
+    .input:focus.input::placeholder {
+        transition: 0.3s;
+        opacity: 0;
+    }
+
+    .input:focus {
+        transform: scale(1.05);
+        box-shadow: 6px 6px 10px rgba(0,0,0,1), 1px 1px 10px rgba(255, 255, 255, 0.6), inset 2px 2px 10px rgba(0,0,0,1), inset -1px -1px 5px rgba(255, 255, 255, 0.6);
+    }
+
+.btn {
+    padding: 10px 35px;
+    cursor: pointer;
+    background-color: #212121;
+    border-radius: 6px;
+    border: 2px solid #212121;
+    box-shadow: 6px 6px 10px rgba(0,0,0,1), 1px 1px 10px rgba(255, 255, 255, 0.6);
+    color: #fff;
+    font-size: 15px;
+    font-weight: bold;
+    transition: 0.35s;
+}
+
+    .btn:hover {
+        transform: scale(1.05);
+        box-shadow: 6px 6px 10px rgba(0,0,0,1), 1px 1px 10px rgba(255, 255, 255, 0.6), inset 2px 2px 10px rgba(0,0,0,1), inset -1px -1px 5px rgba(255, 255, 255, 0.6);
+    }
+
+    .btn:focus {
+        transform: scale(1.05);
+        box-shadow: 6px 6px 10px rgba(0,0,0,1), 1px 1px 10px rgba(255, 255, 255, 0.6), inset 2px 2px 10px rgba(0,0,0,1), inset -1px -1px 5px rgba(255, 255, 255, 0.6);
+    }
+
+.form .switch {
+    font-size: 13px;
+    color: white;
+}
+
+    .form .switch .signup_tog {
+        font-weight: 700;
+        cursor: pointer;
+        text-decoration: underline;
+    }
+
+.container #signup_toggle {
+    display: none;
+}
+
+    .container #signup_toggle:checked + .form {
+        transform: rotateY(-180deg);
+    }
