--- a/Studia/wwwroot/css/site.css
+++ b/Studia/wwwroot/css/site.css
@@ -35,8 +35,8 @@ body {
 
 .comic-button {
     display: inline-block;
-    padding: 5px 15px;
-    font-size: 16px;
+    padding: 5px 12px;
+    font-size: 14px;
     font-weight: bold;
     text-align: center;
     text-decoration: none;
@@ -44,7 +44,7 @@ body {
     background-color: #00FFFF;
     border: 1px solid #000;
     border-radius: 10px;
-    box-shadow: 2.8px 2.8px 0px #000;
+    box-shadow: 1px 1px 0px #000;
     transition: all 0.3s ease;
     cursor: pointer;
 }
@@ -178,120 +178,29 @@ body {
     transform: rotate(45deg);
 }
 
-/* From Uiverse.io by Rohankumar620 */
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transform-style: preserve-3d;
-    transition: all 1s ease;
-}
-
-    .form .form_front {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 20px;
-        position: absolute;
-        backface-visibility: hidden;
-        padding: 65px 45px;
-        border-radius: 15px;
-        box-shadow: inset 2px 2px 10px rgba(0,0,0,1), inset -1px -1px 5px rgba(255, 255, 255, 0.6);
-    }
-
-    .form .form_back {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 20px;
-        position: absolute;
-        backface-visibility: hidden;
-        transform: rotateY(-180deg);
-        padding: 65px 45px;
-        border-radius: 15px;
-        box-shadow: inset 2px 2px 10px rgba(0,0,0,1), inset -1px -1px 5px rgba(255, 255, 255, 0.6);
-    }
-
-.form_details {
-    font-size: 25px;
-    font-weight: 600;
-    padding-bottom: 10px;
-    color: white;
-}
-
-.input {
-    width: 245px;
-    min-height: 45px;
-    color: #fff;
-    outline: none;
-    transition: 0.35s;
-    padding: 0px 7px;
-    background-color: #212121;
-    border-radius: 6px;
-    border: 2px solid #212121;
-    box-shadow: 6px 6px 10px rgba(0,0,0,1), 1px 1px 10px rgba(255, 255, 255, 0.6);
-}
-
-    .input::placeholder {
-        color: #999;
-    }
-
-    .input:focus.input::placeholder {
-        transition: 0.3s;
-        opacity: 0;
-    }
-
-    .input:focus {
-        transform: scale(1.05);
-        box-shadow: 6px 6px 10px rgba(0,0,0,1), 1px 1px 10px rgba(255, 255, 255, 0.6), inset 2px 2px 10px rgba(0,0,0,1), inset -1px -1px 5px rgba(255, 255, 255, 0.6);
-    }
-
-.btn {
-    padding: 10px 35px;
-    cursor: pointer;
-    background-color: #212121;
-    border-radius: 6px;
-    border: 2px solid #212121;
-    box-shadow: 6px 6px 10px rgba(0,0,0,1), 1px 1px 10px rgba(255, 255, 255, 0.6);
-    color: #fff;
-    font-size: 15px;
+.comic-button-green {
+    display: inline-block;
+    padding: 5px 15px;
+    font-size: 16px;
     font-weight: bold;
-    transition: 0.35s;
+    text-align: center;
+    text-decoration: none;
+    color: #171616;
+    background-color: #00ffa7;
+    border: 1px solid #000;
+    border-radius: 10px;
+    transition: all 0.3s ease;
+    cursor: pointer;
 }
 
-    .btn:hover {
-        transform: scale(1.05);
-        box-shadow: 6px 6px 10px rgba(0,0,0,1), 1px 1px 10px rgba(255, 255, 255, 0.6), inset 2px 2px 10px rgba(0,0,0,1), inset -1px -1px 5px rgba(255, 255, 255, 0.6);
+    .comic-button-green:hover {
+     
+        border: 1px solid;
+        box-shadow: 5px 5px 0px white;
     }
 
-    .btn:focus {
-        transform: scale(1.05);
-        box-shadow: 6px 6px 10px rgba(0,0,0,1), 1px 1px 10px rgba(255, 255, 255, 0.6), inset 2px 2px 10px rgba(0,0,0,1), inset -1px -1px 5px rgba(255, 255, 255, 0.6);
-    }
-
-.form .switch {
-    font-size: 13px;
-    color: white;
-}
-
-    .form .switch .signup_tog {
-        font-weight: 700;
-        cursor: pointer;
-        text-decoration: underline;
-    }
-
-.container #signup_toggle {
-    display: none;
-}
-
-    .container #signup_toggle:checked + .form {
-        transform: rotateY(-180deg);
+    .comic-button-green:active {
+        background-color: #00ffa7;
+        box-shadow: none;
+        transform: translateY(4px);
     }
