--- a/Studia/Views/Tasks/Create.cshtml
+++ b/Studia/Views/Tasks/Create.cshtml
@@ -8,9 +8,9 @@
 
 <h4>Task</h4>
 <hr />
-<div class="container">
+<div >
     <div class="col-md-4">
-        <form class="form" asp-action="Create">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label">Name</label>
@@ -42,7 +42,7 @@
                 <span asp-validation-for="CreatedBy" class="text-danger"></span>
             </div>
             <br/>
-            <div class="form-group">
+            <div >
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
