Fixed input display problem

--- a/Studia/Views/Tasks/Index.cshtml
+++ b/Studia/Views/Tasks/Index.cshtml
@@ -37,9 +37,8 @@
                 {
                     <tr>
                         <td class="text-center">
-                            <label class="container">
+                            <label class="checkmark">
                                 <input checked="checked" type="checkbox"/>
-                                <div class="checkmark"></div>
                             </label>
                         </td>
                         <td>@Html.DisplayFor(modelItem => item.Name)</td>
