--- a/Studia/Views/Tasks/Create.cshtml
+++ b/Studia/Views/Tasks/Create.cshtml
@@ -1,16 +1,13 @@
 ﻿@model Studia.Models.Task
-
 @{
     ViewData["Title"] = "Create";
 }
-
 <h1>Create</h1>
-
 <h4>Task</h4>
 <hr />
-<div class="container">
+<div class="row">
     <div class="col-md-4">
-        <form class="form" asp-action="Create">
+        <form asp-action="Create" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label">Name</label>
@@ -25,15 +22,16 @@
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
                 <select required="true" asp-for="Status" class="form-select">
-                    <option value="Completed">Complete</option>
+                    <option value="">-- Select Status --</option>
                     <option value="Pending">Pending</option>
+                    <option value="Completed">Complete</option>
                     <option value="Due Late">Late</option>
                 </select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label required="true" asp-for="DueDateTime" class="control-label">Due date and time</label>
-                <input asp-for="DueDateTime" class="form-control" />
+                <label asp-for="DueDateTime" class="control-label">Due date and time</label>
+                <input required="true" asp-for="DueDateTime" class="form-control" type="datetime-local" />
                 <span asp-validation-for="DueDateTime" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -41,18 +39,18 @@
                 <input asp-for="CreatedBy" class="form-control" />
                 <span asp-validation-for="CreatedBy" class="text-danger"></span>
             </div>
-            <br/>
+            <br />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
-
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
