--- a/Studia/wwwroot/css/site.css
+++ b/Studia/wwwroot/css/site.css
@@ -1,6 +1,7 @@
 body {
     background-color: #171616;
 }
+
 html {
     font-size: 14px;
 }
@@ -52,7 +53,7 @@ body {
     .comic-button:hover {
         background-color: white;
         color: #000000;
-        border: 1px solid ;
+        border: 1px solid;
         box-shadow: 5px 5px 0px #258cfb;
     }
 
@@ -62,7 +63,7 @@ body {
         transform: translateY(4px);
     }
 
-.due-late{
+.due-late {
     display: inline-block;
     padding: 5px 10px;
     font-size: 15px;
@@ -107,7 +108,7 @@ body {
 .Cool-button {
     color: #258cfb;
     padding: 0.5em 0.9em;
-    text-decoration:none;
+    text-decoration: none;
     font-size: 16px;
     border-radius: 0.5em;
     background: #2b2a2a;
@@ -119,65 +120,6 @@ body {
         color: #666;
     }
 
-/* From Uiverse.io by SelfMadeSystem */
-/* Hide the default checkbox */
-.container input {
-    display: none;
-}
-
-.container {
-    display: block;
-    position: relative;
-    cursor: pointer;
-    font-size: 20px;
-    user-select: none;
-    -webkit-tap-highlight-color: transparent;
-}
-
-/* Create a custom checkbox */
-.checkmark {
-    position: relative;
-    top: 0;
-    left: 0;
-    height: 1.3em;
-    width: 1.3em;
-    background-color: #2196F300;
-    border-radius: 0.25em;
-    transition: all 0.25s;
-    
-}
-
-/* When the checkbox is checked, add a blue background */
-.container input:checked ~ .checkmark {
-    background-color: #2196F3;
-}
-
-/* Create the checkmark/indicator (hidden when not checked) */
-.checkmark:after {
-    content: "";
-    position: absolute;
-    transform: rotate(0deg);
-    border: 0.1em solid black;
-    left: 0;
-    top: 0;
-    width: 1.05em;
-    height: 1.05em;
-    border-radius: 0.25em;
-    transition: all 0.25s, border-width 0.1s;
-}
-
-/* Show the checkmark when checked */
-.container input:checked ~ .checkmark:after {
-    left: 0.45em;
-    top: 0.25em;
-    width: 0.25em;
-    height: 0.5em;
-    border-color: #fff0 white white #fff0;
-    border-width: 0 0.15em 0.15em 0;
-    border-radius: 0em;
-    transform: rotate(45deg);
-}
-
 .comic-button-green {
     display: inline-block;
     padding: 5px 15px;
@@ -186,7 +128,7 @@ body {
     text-align: center;
     text-decoration: none;
     color: #171616;
-    background-color: #00ffa7;
+    background-color: #01ff54;
     border: 1px solid #000;
     border-radius: 10px;
     transition: all 0.3s ease;
@@ -194,7 +136,6 @@ body {
 }
 
     .comic-button-green:hover {
-     
         border: 1px solid;
         box-shadow: 5px 5px 0px white;
     }
