--- a/Studia/Views/Tasks/Index.cshtml
+++ b/Studia/Views/Tasks/Index.cshtml
@@ -25,7 +25,7 @@
 
 <div >
     <div class="d-flex justify-content-between align-items-center mb-4">
-        <h1 class="text-primary" style="color: white;">Task List</h1>
+        <h1 style="font-size:55px;" class="text-decoration-none">Task List</h1>
     </div>
 
     <div class="mb-3" >
